# knitter-module

./: Cargo.toml  build.rs
dart_packges/knitter_id_codes/lib/src/: field_ids.dart  manage_ids.dart
locales/: en.yml
manage_defines/: 20001_projects.toml  20002_asset_collections.toml  20003_assets.toml  20004_sets.toml  20005_sequences.toml  20006_cuts.toml  20007_epics.toml  20008_assemblies.toml  20011_set_collections.toml
protocols/: assembly.proto  asset.proto  asset_collection.proto  cut.proto  epic.proto  knitter.proto  knitter_module.proto  project.proto  reference.proto  sequence.proto  set.proto  set_collection.proto
src/: knitter_module.rs  lib.rs
src/ids_codes/: field_ids.rs  manage_ids.rs
src/managers/: assemblies_manager.rs  asset_collections_manager.rs  assets_manager.rs  cuts_manager.rs  epics_manager.rs  projects_manager.rs  sequences_manager.rs  set_collections_manager.rs  sets_manager.rs
src/protocols/: knitter_module.rs  mod.rs
src/service_handles/: mod.rs
src/service_handles/assembly_service_handles/: handle_new_assembly.rs  handle_reference_assemblies.rs  mod.rs
src/service_handles/asset_collection_servcice_handles/: handle_get_asset_collection_assembly_total_count.rs  handle_get_asset_collection_assemlies_page.rs  handle_get_asset_collection_asset_total_count.rs  handle_get_asset_collection_assets_page.rs  handle_new_asset_collection.rs  mod.rs
src/service_handles/asset_service_handles/: handle_get_referenced_assets.rs  handle_new_asset.rs  mod.rs
src/service_handles/cut_service_handles/: handle_new_cut.rs  mod.rs
src/service_handles/epic_service_handles/: handle_get_epic_sequences.rs  handle_new_epic.rs  mod.rs
src/service_handles/project_service_handles/: handle_associate_asset_collections_to_project.rs  handle_associate_set_collections_to_project.rs  handle_change_project_status.rs  handle_deassociate_asset_collections_from_project.rs  handle_deassociate_set_collections_from_project.rs  handle_get_project_associated_asset_collections.rs  handle_get_project_associated_set_collections.rs  handle_get_project_epics.rs  handle_new_project.rs  mod.rs
src/service_handles/reference_service_handles/: handle_add_references.rs  handle_change_reference_prefab.rs  handle_list_references.rs  handle_remove_references.rs  mod.rs
src/service_handles/sequence_service_handles/: handle_new_sequence.rs  mod.rs
src/service_handles/set_collection_service_handles/: handle_get_set_collection_set_total_count.rs  handle_get_set_collection_sets_page.rs  handle_new_set_collection.rs  mod.rs
src/service_handles/set_service_handles/: handle_new_set.rs  mod.rs
