[package]
name = "knitter_module"
version = "0.1.1"
authors = ["闫刚 <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = { path = "../cashmere_core/cash_core" }
cash_result = { path = "../cashmere_core/cash_result" }
auth = { path = "../cashmere_core/auth" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }
managers = { path = "../cashmere_core/managers" }
entity = { path = "../cashmere_core/entity" }
runtime_handle = { path = "../cashmere_core/runtime_handle" }
view = { path = "../cashmere_core/view" }
manage_define = { path = "../cashmere_core/manage_define" }
server_utils = { path = "../cashmere_core/server_utils" }
service_utils = { path = "../cashmere_core/service_utils" }
request_utils = { path = "../cashmere_core/request_utils" }

dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tokio",
  "bson",
  "tonic",
  "log",
  "parking_lot",
  "rust-i18n",
  "once_cell",
] }

tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.1"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tonic-build",
] }
manage_define = { path = "../cashmere_core/manage_define" }
